sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:8: error: not found: value posJoueur
      posJoueur = 0
      ^NaiveBaseball:10: error: not found: value posJoueur
      posJoueur += 1
      ^NaiveBaseball:12: error: not found: value posJoueur
    if (((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou) > ((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou)) {
                           ^NaiveBaseball:12: error: not found: value posJoueur
    if (((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou) > ((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou)) {
                                                                  ^NaiveBaseball:12: error: not found: value posJoueur
    if (((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou) > ((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou)) {
                                                                                                           ^NaiveBaseball:12: error: not found: value posJoueur
    if (((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou) > ((getCouleurJoueur(posJoueur,0))-trou)*((getCouleurJoueur(posJoueur,0))-trou)) {
                                                                                                                                                  ^